tests/invalid_inputs/sema/function_inside_function.cpp

int main() {
	int foo();	// error
}
